# windsurf-switcher

./: .gitignore  Package.resolved  Package.swift  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
Resources/: AppIcon.icns
Sources/App/: AppLogging.swift  AppState.swift  SoftJwtRefreshClient.swift  WindsurfSwitcherApp.swift
Sources/Core/: Account.swift  AccountStore.swift  DataMigration.swift  ProtoWire.swift  WSSLog.swift
Sources/Relay/: BanSignal.swift  ConnectError.swift  JWTRewrite.swift  Pool.swift  PoolTypes.swift  ProtoRewrite.swift  QuotaRewrite.swift  RelayConfig.swift  RelayManager.swift  Server.swift  Stats.swift  UpdateSink.swift
Sources/WSSCLI/: main.swift
Sources/WindsurfClient/: GetOTT.swift  GetPlanStatus.swift  JWTDecode.swift
Sources/Wrapper/: ScriptTemplate.swift  Wrapper.swift
Tests/CoreTests/: DataMigrationTests.swift  ProtoWireTests.swift
Tests/RelayTests/: BanSignalTests.swift  ConnectErrorTests.swift  JWTRewriteTests.swift  PoolTests.swift  ProtoRewriteTests.swift  QuotaRewriteTests.swift
Tests/WindsurfClientTests/: GetOTTTests.swift
Tests/WrapperTests/: WrapperTests.swift
WindsurfSwitcher/: .gitignore  Package.swift  README.md
WindsurfSwitcher/scripts/: build-app.sh  build-dmg.sh
scripts/: build-app.sh  build-dmg.sh  generate-app-icon.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  proto.rs  store.rs  windsurf.rs
tools/: gen_icons.py
(+46 files in other folders)
