[package]
name = "windsurf-switcher"
version = "0.1.0"
description = "macOS menubar switcher for Windsurf devin-session-tokens"
authors = ["zhangshijie"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "windsurf_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "gzip"] }
url = "2"

dirs = "5"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
